Changed the building to drupal for testing

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: drupal-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
 
-    - name: Test
+    - name: Build theme
       working-directory: web/themes/custom/itotko_theme
       run: |
         npm install gulp
