--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -5,10 +5,13 @@ on: [push]
 jobs:
   build:
 
-    runs-on: drupal-latest
+    runs-on: debian-latest
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: install sass
+      run: apt install -y sass
 
     - name: Validate composer.json and composer.lock
       run: composer validate
@@ -19,5 +22,4 @@ jobs:
     - name: Build theme
       working-directory: web/themes/custom/itotko_theme
       run: |
-        npm install gulp
-        gulp build
+        sass scss/itotko.scss css/itotko.css
