--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: install sass
-      run: apt install -y sass
+      run: sudo apt install -y sass
 
     - name: Validate composer.json and composer.lock
       run: composer validate
