--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,7 +16,12 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
 
-    - name: Build theme
+    - name: Fetch Bootstrap sass
       working-directory: web/themes/custom/itotko_theme
       run: |
-        git submodule init && git submodule update bootstrap && sass scss/style.scss css/style.css
+        git submodule init && git submodule update bootstrap
+
+    - name: Build sass
+      working-directory: web/themes/custom/itotko_theme
+      run: |
+        mkdir css && sass scss/style.scss css/style.css
