--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,4 +6,10 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install -j$(nproc) gd
 
+COPY config /var/www/
+COPY vendor /var/www/
+COPY web /var/www/
+COPY composer.json /var/www/
+COPY composer.lock /var/www/
+
 WORKDIR /var/www
