--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: drupal-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
 
     - name: Validate composer.json and composer.lock
       run: composer validate
@@ -25,3 +25,11 @@ jobs:
       working-directory: web/themes/custom/itotko_theme
       run: |
         mkdir css && sass scss/style.scss css/style.css
+
+    - name: Publish to Registry
+      uses: larskhansen/itotko@master
+      with:
+        name: larskhansen/itotko
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: docker/Dockerfile
