--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -29,8 +29,8 @@ jobs:
     - name: build-push
       uses: docker/build-push-action@v1
       with:
-        username: ${{ DOCKER_USERNAME }}
-        password: ${{ DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
         registry: larskhansen
         repository: larskhansen/itotko
         tags: v1
