--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -33,5 +33,5 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         registry: larskhansen
         dockerfile: docker/Dockerfile
-        repository: larskhansen/itotko
+        repository: itotko
         tags: v1
