docker repo messing up

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,7 +31,6 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        registry: larskhansen
         dockerfile: docker/Dockerfile
-        repository: itotko
+        repository: larskhansen/itotko
         tags: v1
