Changed the tag to the latest

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,12 +1,15 @@
 name: Itotko
 
-on: [push]
-
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   build:
-
     runs-on: drupal-latest
-
     steps:
     - uses: actions/checkout@master
 
