Added a sed for changing the apache root dir

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,4 +12,6 @@ COPY --chown=www-data:www-data web /var/www/web
 COPY --chown=www-data:www-data composer.json /var/www/
 COPY --chown=www-data:www-data composer.lock /var/www/
 
+RUN sed -i "s|/var/www/html|/var/www|" /etc/apache2/sites-available/000-default.conf
+
 WORKDIR /var/www
