--- a/.github/workflows/itotko-master.yml
+++ b/.github/workflows/itotko-master.yml
@@ -29,16 +29,22 @@ jobs:
       run: |
         mkdir css && sass scss/style.scss css/style.css
 
-    - name: build-push
-      run:
-        docker buildx build
-        --platform linux/arm
-        --output "type=image,push=false" \
-            --file ./docker/Dockerfile .
-      uses: docker/build-push-action@v1
+    - name: set up buildX
+      id: buildx
+      uses: crazy-max/ghaction-docker-buildx@v1
       with:
+        buildx-version: latest
+        qemu-version: latest
+    - name: Run Buildx
+        run: |
+          docker buildx build \
+            -t itotko \
+            --platform linux/arm/v6,linux/arm/v7,linux/arm64 \
+            --output "type=image,push=false" \
+            --file ./docker/Dockerfile .
+    - name: Push image
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: larskhansen/itotko
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        dockerfile: docker/Dockerfile
-        repository: larskhansen/itotko
-        tags: latest
