--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/token": "^1.5",
         "drupal/views_slideshow": "^4.6",
         "drush/drush": "^10.0.0",
+        "drupal/console": "^1.0.2",
         "larskhansen/itotko_theme": "dev-master"
     },
     "conflict": {
