Changed the docker to a builder instead of copying

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,30 @@
+FROM php:7.4-apache as builder
+
+WORKDIR /var/www
+
+RUN echo 'memory_limit = -1' >> /usr/local/etc/php/conf.d/docker-php-memlimit.ini
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git libfreetype6-dev libjpeg62-turbo-dev libpng-dev zlib1g-dev zip unzip libzip-dev
+
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install -j$(nproc) gd
+
+RUN docker-php-ext-configure zip \
+    && docker-php-ext-install zip
+
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+RUN php composer-setup.php --install-dir=/usr/local/bin --filename=composer
+
+ADD composer.json .
+ADD composer.lock .
+ADD config/ .
+
+RUN composer update --no-dev --with-dependencies
+
 FROM php:7.4-apache
+
+COPY --from=builder /var/www /var/www
 
 ENV USERNAME=username \
     PASSWORD=password \
@@ -16,12 +42,6 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install -j$(nproc) gd pdo_mysql \
     && pecl install memcached-3.1.5 \
     && docker-php-ext-enable memcached
-
-COPY --chown=www-data:www-data config /var/www/config
-COPY --chown=www-data:www-data vendor /var/www/vendor
-COPY --chown=www-data:www-data web /var/www/web
-COPY --chown=www-data:www-data composer.json /var/www/
-COPY --chown=www-data:www-data composer.lock /var/www/
 
 RUN sed -i "s|/var/www/html|/var/www/web|" /etc/apache2/sites-available/000-default.conf
 
