--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -38,4 +38,4 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         dockerfile: docker/Dockerfile
         repository: larskhansen/itotko
-        tags: ${{ GITHUB_RUN_NUMBER }}
+        tags: ${{ BUILD_NUMBER }}
