--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -35,4 +35,4 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         dockerfile: docker/Dockerfile
         repository: larskhansen/itotko
-        tags: ${{ GITHUB_RUN_NUMBER }}
+        tags: ${GITHUB_RUN_NUMBER}
