--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -26,12 +26,6 @@ jobs:
         docker buildx build \
           --platform linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64 \
           --output "type=image,push=false" \
+          --tag larskhansen/itotko:$GITHUB_BUILD_NUMBER \
+          --push \
           --file ./docker/Dockerfile .
-      
-    - name: build-push
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        dockerfile: docker/Dockerfile
-        repository: larskhansen/itotko
