--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -26,6 +26,10 @@ jobs:
         docker buildx build \
           --platform linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64 \
           --output "type=image,push=false" \
-          --tag larskhansen/itotko \
-          --push \
+          --tag larskhansen/itotko:latest \
           --file ./docker/Dockerfile .
+      
+    - name: Login
+      run: |
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} && \
+        docker push larskhansen/itotko:latest
