--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -14,22 +14,28 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
  
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: crazy-max/ghaction-docker-buildx@v1
-      with:
-        buildx-version: latest
-        qemu-version: latest
-            
-    - name: Run Buildx
+    - name: Prepare
+      if: success()
+      id: prepare
+      run: |
+        echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
+        echo ::set-output name=docker_username::larskhansen
+        echo ::set-output name=docker_image::docker.io/larskhansen/itotko
+        echo ::set-output name=version::${GITHUB_REF#refs/*/}
+        echo ::set-output name=hash::${GITHUB_SHA}
+    - name: Docker Login
+      if: success()
+      env:
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+        echo "${DOCKER_PASSWORD}" | docker login --username "${{ steps.prepare.outputs.docker_username }}" --password-stdin docker.io
+    - name: Run Buildx (master)
+      if: success() && contains(steps.prepare.outputs.version, 'master')
       run: |
         docker buildx build \
-          --platform linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64 \
-          --output "type=image,push=false" \
-          --tag larskhansen/itotko:latest \
-          --file ./docker/Dockerfile .
-      
-    - name: Login
-      run: |
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} && \
-        docker push larskhansen/itotko:latest
+          --output type=image,name=${{ steps.prepare.outputs.docker_image }},push=true \
+          --platform ${{ steps.prepare.outputs.docker_platforms }} \
+          --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }}" \
+          --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.hash }}" \
+          --tag "${{ steps.prepare.outputs.docker_image }}:latest" \
+          --file docker/Dockerfile .
