--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -14,6 +14,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
  
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: crazy-max/ghaction-docker-buildx@v1
+      with:
+        buildx-version: latest
+        qemu-version: latest
+ 
     - name: Prepare
       if: success()
       id: prepare
