--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -44,5 +44,5 @@ jobs:
           --platform ${{ steps.prepare.outputs.docker_platforms }} \
           --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }}" \
           --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.hash }}" \
-          --tag "${{ steps.prepare.outputs.docker_image }}:latest" \
+          --tag "${{ steps.prepare.outputs.docker_image }}:${GITHUB_BUILD_NUMBER}" \
           --file docker/Dockerfile .
