--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -28,8 +28,7 @@ jobs:
         echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
         echo ::set-output name=docker_username::larskhansen
         echo ::set-output name=docker_image::docker.io/larskhansen/itotko
-        echo ::set-output name=version::${GITHUB_REF#refs/*/}
-        echo ::set-output name=hash::${GITHUB_SHA}
+        echo ::set-output name=build_number::${GITHUB_BUILD_NUMBER}
     - name: Docker Login
       if: success()
       env:
@@ -42,7 +41,5 @@ jobs:
         docker buildx build \
           --output type=image,name=${{ steps.prepare.outputs.docker_image }},push=true \
           --platform ${{ steps.prepare.outputs.docker_platforms }} \
-          --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }}" \
-          --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.hash }}" \
-          --tag "${{ steps.prepare.outputs.docker_image }}:${GITHUB_BUILD_NUMBER}" \
+          --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.build_number" \
           --file docker/Dockerfile .
