--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -28,6 +28,8 @@ jobs:
         echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
         echo ::set-output name=docker_username::larskhansen
         echo ::set-output name=docker_image::docker.io/larskhansen/itotko
+        echo ::set-output name=version::${GITHUB_REF#refs/*/}
+        echo ::set-output name=hash::${GITHUB_SHA}
         echo ::set-output name=build_number::${GITHUB_BUILD_NUMBER}
     - name: Docker Login
       if: success()
