--- a/.github/workflows/itotko-develop.yml
+++ b/.github/workflows/itotko-develop.yml
@@ -1,18 +1,47 @@
-name: Docker Image CI
+name: Itotko-develop
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - develop
   pull_request:
-    branches: [ master ]
-
+    branches:
+      - develop
 jobs:
-
-  build:
-
+  buildx:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: crazy-max/ghaction-docker-buildx@v1
+      with:
+        buildx-version: latest
+        qemu-version: latest
+
+    - name: Prepare
+      if: success()
+      id: prepare
+      run: |
+        echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
+        echo ::set-output name=docker_username::larskhansen
+        echo ::set-output name=docker_image::docker.io/larskhansen/itotko-dev
+        echo ::set-output name=version::${GITHUB_REF#refs/*/}
+        echo ::set-output name=hash::${GITHUB_SHA}
+        echo ::set-output name=build_number::${GITHUB_RUN_NUMBER}
+    - name: Docker Login
+      if: success()
+      env:
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+        echo "${DOCKER_PASSWORD}" | docker login --username "${{ steps.prepare.outputs.docker_username }}" --password-stdin docker.io
+    - name: Run Buildx (develop)
+      if: success() && contains(steps.prepare.outputs.version, 'develop')
+      run: |
+        docker buildx build \
+          --output type=image,name=${{ steps.prepare.outputs.docker_image }},push=true \
+          --platform ${{ steps.prepare.outputs.docker_platforms }} \
+          --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.build_number }}" \
+          --file docker/Dockerfile .
