--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,11 +1,13 @@
-name: Itotko-develop
+name: Itotko-master
 
 on:
   push:
     branches:
+      - master
       - develop
   pull_request:
     branches:
+      - master
       - develop
 jobs:
   buildx:
@@ -27,7 +29,8 @@ jobs:
       run: |
         echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
         echo ::set-output name=docker_username::larskhansen
-        echo ::set-output name=docker_image::docker.io/larskhansen/itotko-dev
+        echo ::set-output name=docker_image_master::docker.io/larskhansen/itotko
+        echo ::set-output name=docker_image_develop::docker.io/larskhansen/itotko-dev
         echo ::set-output name=version::${GITHUB_REF#refs/*/}
         echo ::set-output name=hash::${GITHUB_SHA}
         echo ::set-output name=build_number::${GITHUB_RUN_NUMBER}
@@ -37,11 +40,19 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         echo "${DOCKER_PASSWORD}" | docker login --username "${{ steps.prepare.outputs.docker_username }}" --password-stdin docker.io
+    - name: Run Buildx (master)
+      if: success() && contains(steps.prepare.outputs.version, 'master')
+      run: |
+        docker buildx build \
+          --output type=image,name=${{ steps.prepare.outputs.docker_image_master }},push=true \
+          --platform ${{ steps.prepare.outputs.docker_platforms }} \
+          --tag "${{ steps.prepare.outputs.docker_image_master }}:${{ steps.prepare.outputs.build_number }}" \
+          --file docker/Dockerfile .
     - name: Run Buildx (develop)
       if: success() && contains(steps.prepare.outputs.version, 'develop')
       run: |
         docker buildx build \
-          --output type=image,name=${{ steps.prepare.outputs.docker_image }},push=true \
+          --output type=image,name=${{ steps.prepare.outputs.docker_image_develop }},push=true \
           --platform ${{ steps.prepare.outputs.docker_platforms }} \
-          --tag "${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.build_number }}" \
+          --tag "${{ steps.prepare.outputs.docker_image_develop }}:${{ steps.prepare.outputs.build_number }}" \
           --file docker/Dockerfile .
