--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
         "drupal/core-vendor-hardening": "^8.8",
+        "drupal/eu_cookie_compliance": "^1.9",
         "drupal/matomo": "1.9",
         "drupal/memcache": "^2.0",
         "drupal/metatag": "^1.10",
