--- a/.github/workflows/itotko-develop.yml
+++ b/.github/workflows/itotko-develop.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - develop
+    branches-ignore:
+      - master
   pull_request:
     branches:
       - develop
+    branches-ignore:
+      - master
 jobs:
   buildx:
     runs-on: ubuntu-latest
@@ -22,7 +26,7 @@ jobs:
         qemu-version: latest
 
     - name: Prepare
-      if: success()
+      if: success() && contains(steps.prepare.outputs.version, 'develop')
       id: prepare
       run: |
         echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
@@ -32,7 +36,7 @@ jobs:
         echo ::set-output name=hash::${GITHUB_SHA}
         echo ::set-output name=build_number::${GITHUB_RUN_NUMBER}
     - name: Docker Login
-      if: success()
+      if: success() && contains(steps.prepare.outputs.version, 'develop')
       env:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
