--- a/.github/workflows/itotko-master.yml
+++ b/.github/workflows/itotko-master.yml
@@ -22,7 +22,7 @@ jobs:
         qemu-version: latest
 
     - name: Prepare
-      if: success() && contains(steps.prepare.outputs.version, 'master')
+      if: success()
       id: prepare
       run: |
         echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
@@ -32,13 +32,13 @@ jobs:
         echo ::set-output name=hash::${GITHUB_SHA}
         echo ::set-output name=build_number::${GITHUB_RUN_NUMBER}
     - name: Docker Login
-      if: success() && contains(steps.prepare.outputs.version, 'master')
+      if: success()
       env:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
         echo "${DOCKER_PASSWORD}" | docker login --username "${{ steps.prepare.outputs.docker_username }}" --password-stdin docker.io
     - name: Run Buildx (master)
-      if: success() && contains(steps.prepare.outputs.version, 'master')
+      if: success()
       run: |
         docker buildx build \
           --output type=image,name=${{ steps.prepare.outputs.docker_image }},push=true \
