--- a/.github/workflows/itotko-develop.yml
+++ b/.github/workflows/itotko-develop.yml
@@ -22,7 +22,7 @@ jobs:
         qemu-version: latest
 
     - name: Prepare
-      if: success() && contains(steps.prepare.outputs.version, 'develop')
+      if: success()
       id: prepare
       run: |
         echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
@@ -32,7 +32,7 @@ jobs:
         echo ::set-output name=hash::${GITHUB_SHA}
         echo ::set-output name=build_number::${GITHUB_RUN_NUMBER}
     - name: Docker Login
-      if: success() && contains(steps.prepare.outputs.version, 'develop')
+      if: success()
       env:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
