--- a/composer.json
+++ b/composer.json
@@ -19,27 +19,26 @@
         }
     ],
     "require": {
-        "composer/installers": "^1.2",
-        "drupal/admin_toolbar": "^2.2",
-        "drupal/bootstrap": "^3.21",
+        "composer/installers": "1.9.0",
+        "drupal/admin_toolbar": "2.3",
+        "drupal/bootstrap": "3.23",
         "drupal/contribute": "^5.0@beta",
-        "drupal/core-composer-scaffold": "^8.9",
-        "drupal/core-project-message": "^8.9",
-        "drupal/core-recommended": "^8.9",
-        "drupal/core-vendor-hardening": "^8.9",
-        "drupal/eu_cookie_compliance": "^1.9",
-        "drupal/matomo": "1.9",
-        "drupal/memcache": "^2.0",
-        "drupal/metatag": "^1.10",
-        "drupal/pathauto": "^1.5",
-        "drupal/piwik": "^1.4",
-        "drupal/restui": "^1.17",
-        "drupal/smtp": "^1.0@beta",
-        "drupal/superfish": "^1.3",
-        "drupal/token": "^1.5",
-        "drupal/views_slideshow": "^4.6",
-        "drush/drush": "^10.0.0",
-        "drupal/console": "^1.0.2",
+        "drupal/core-composer-scaffold": "8.9.6",
+        "drupal/core-project-message": "8.9.6",
+        "drupal/core-recommended": "8.9.6",
+        "drupal/core-vendor-hardening": "8.9.6",
+        "drupal/eu_cookie_compliance": "1.9",
+        "drupal/matomo": "1.10",
+        "drupal/memcache": "2.2",
+        "drupal/metatag": "1.14",
+        "drupal/pathauto": "1.8",
+        "drupal/restui": "1.18",
+        "drupal/smtp": "1.0.0",
+        "drupal/superfish": "1.4",
+        "drupal/token": "1.7",
+        "drupal/views_slideshow": "4.8.0",
+        "drush/drush": "10.3.4",
+        "drupal/console": "1.9.5",
         "larskhansen/itotko_theme": "dev-master"
     },
     "conflict": {
