--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
         "drupal/admin_toolbar": "2.4",
         "drupal/bootstrap": "3.23",
         "drupal/console": "1.9.5",
-        "drupal/core-composer-scaffold": "^9.1.0",
-        "drupal/core-project-message": "^9.1.0",
-        "drupal/core-recommended": "^9.1.0",
-        "drupal/core-vendor-hardening": "8.9.6",
+        "drupal/core-composer-scaffold": "9.1.0",
+        "drupal/core-project-message": "9.1.0",
+        "drupal/core-recommended": "9.1.0",
+        "drupal/core-vendor-hardening": "9.1.0",
         "drupal/eu_cookie_compliance": "1.14",
         "drupal/matomo": "1.11",
         "drupal/memcache": "2.2",
