--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "drupal/superfish": "^1.4",
         "drupal/token": "^1.9",
         "drupal/views_slideshow": "^4.8",
+        "drush/drush": "^10.3",
         "larskhansen/itotko_theme": "dev-master"
     },
     "conflict": {
