Found a small typo

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -66,8 +66,8 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install -j$(nproc) gd pdo_mysql zip opcache \
     && pecl install memcached-3.1.5 \
     && docker-php-ext-enable memcached \
-    && apt-mark auto '.*' > /dev/null; \
-    && apt-mark manual $savedAptMark; \
+    && apt-mark auto '.*' > /dev/null \
+    && apt-mark manual $savedAptMark \
     && ldd "$(php -r 'echo ini_get("extension_dir");')"/*.so \
        | awk '/=>/ { print $3 }' \
        | sort -u \
@@ -75,7 +75,7 @@ RUN apt-get update && apt-get install -y \
        | cut -d: -f1 \
        | sort -u \
        | xargs -rt apt-mark manual \
-    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
+    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
     && rm -rf /var/lib/apt/lists/*
 
 RUN { \
