Testing the new setup for docker building

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "composer/installers": "^1.11.0",
         "drupal/admin_toolbar": "^3.0",
-        "drupal/bootstrap": "^3.23",
+        "drupal/bootstrap5": "^1.1",
         "drupal/console": "^1.9.7",
         "drupal/core-composer-scaffold": "^9.1.10",
         "drupal/core-project-message": "^9.1.10",
