The config for bootstrap itotko has been updated

--- a/config/block.block.itotko_main_menu.yml
+++ b/config/block.block.itotko_main_menu.yml
@@ -12,15 +12,15 @@ _core:
   default_config_hash: rx9IrdDv7Ldc4kpalZAxdhIPZfYIeOMh1N-qKoQZwHo
 id: itotko_main_menu
 theme: itotko
-region: navigation
+region: header
 weight: -4
 provider: null
 plugin: 'system_menu_block:main'
 settings:
   id: 'system_menu_block:main'
   label: 'Main navigation'
-  provider: system
   label_display: '0'
+  provider: system
   level: 1
   depth: 1
   expand_all_items: false
