--- a/config/block.block.mainnavigation_2.yml
+++ b/config/block.block.mainnavigation_2.yml
@@ -1,6 +1,6 @@
 uuid: a62ed24c-506a-45ed-bdb8-18743edd9403
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - system.menu.main
@@ -10,15 +10,15 @@ dependencies:
     - itotko
 id: mainnavigation_2
 theme: itotko
-region: navigation
+region: header
 weight: 0
 provider: null
 plugin: 'superfish:main'
 settings:
   id: 'superfish:main'
   label: Menu
-  provider: superfish
   label_display: '0'
+  provider: superfish
   level: '1'
   depth: '0'
   expand_all_items: false
