--- a/config/block.block.itotko_account_menu.yml
+++ b/config/block.block.itotko_account_menu.yml
@@ -12,15 +12,15 @@ _core:
   default_config_hash: DweBpscQZdG0-fHkSpUzdYucrNH45G_KF7Z82V-oyQM
 id: itotko_account_menu
 theme: itotko
-region: navigation
+region: header
 weight: -3
 provider: null
 plugin: 'system_menu_block:account'
 settings:
   id: 'system_menu_block:account'
   label: 'User account menu'
-  provider: system
   label_display: '0'
+  provider: system
   level: 1
   depth: 1
   expand_all_items: false
