--- a/config/block.block.itotko_breadcrumbs.yml
+++ b/config/block.block.itotko_breadcrumbs.yml
@@ -10,13 +10,13 @@ _core:
   default_config_hash: oXUb3JZR2WW5VOdw4HrhRicCsq51mCgLfRyvheG68ck
 id: itotko_breadcrumbs
 theme: itotko
-region: navigation
+region: header
 weight: -6
 provider: null
 plugin: system_breadcrumb_block
 settings:
   id: system_breadcrumb_block
   label: Breadcrumbs
-  provider: system
   label_display: '0'
+  provider: system
 visibility: {  }
