--- a/config/block.block.itotko_powered.yml
+++ b/config/block.block.itotko_powered.yml
@@ -10,13 +10,13 @@ _core:
   default_config_hash: jQQUUWN2Uxr5qZtc9zcJKBCxpKY8orN1u2HPqYYRQDI
 id: itotko_powered
 theme: itotko
-region: navigation
+region: header
 weight: -7
 provider: null
 plugin: system_powered_by_block
 settings:
   id: system_powered_by_block
   label: 'Powered by Drupal'
-  provider: system
   label_display: '0'
+  provider: system
 visibility: {  }
