Trying yet again with the server

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -80,14 +80,14 @@ RUN { \
 	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
 
 # Changing the apache_document_root to remove the unused html folder.
-#RUN sed -i "s|/var/www/html|$APACHE_DOCUMENT_ROOT|" /etc/apache2/sites-available/000-default.conf \
-RUN a2enmod rewrite \
+RUN sed -i "s|/var/www/html|$APACHE_DOCUMENT_ROOT|" /etc/apache2/sites-available/000-default.conf \
+    && a2enmod rewrite \
     && rm -rf /var/www/html \
     && chown -Rf www-data:www-data /var/www/web
 
 # The settings.php file does not and MUST NOT have the sensitive db settings.
 # This will be filled in via Environment variables in the startup script.
-ADD docker/settings.php /var/www/web/sites/default/settings.php
+ADD --chown=www-data:www-data docker/settings.php /var/www/web/sites/default/settings.php
 
 # The startup script, this also starts the apache_foreground script.
 ADD docker/start-itotko /usr/local/bin/
