--- a/config/block.block.itotko_main_menu.yml
+++ b/config/block.block.itotko_main_menu.yml
@@ -1,6 +1,6 @@
 uuid: 297a8dbf-7bf0-4fc6-b379-a16207954890
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - system.menu.main
