Finally the dockerfile is working with Bootstrap5

--- a/.lando.yml
+++ b/.lando.yml
@@ -33,9 +33,10 @@ tooling:
   post-import:
     description: Imports config and run database updates
     cmd:
+      - appserver: drush then bootstrap5 -y
       - node: npm --prefix /app/web/themes/contrib/bootstrap5 install
       - node: npm install -g sass
       - node: sass /app/web/themes/custom/itotko_theme/scss/style.scss /app/web/themes/custom/itotko_theme/css/style.css
       - appserver: drush updb -y
-      - appserver: drush cim -y
+      - appserver: drush cim --source=../config -y
       - appserver: drush cr
