--- a/.github/workflows/itotko-develop.yml
+++ b/.github/workflows/itotko-develop.yml
@@ -25,7 +25,7 @@ jobs:
       if: success()
       id: prepare
       run: |
-        echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
+        echo ::set-output name=docker_platforms::linux/amd64
         echo ::set-output name=docker_username::larskhansen
         echo ::set-output name=docker_image::docker.io/larskhansen/itotko-dev
         echo ::set-output name=version::${GITHUB_REF#refs/*/}
