--- a/.github/workflows/itotko-master.yml
+++ b/.github/workflows/itotko-master.yml
@@ -25,7 +25,7 @@ jobs:
       if: success()
       id: prepare
       run: |
-        echo ::set-output name=docker_platforms::linux/amd64,linux/arm/v6,linux/arm/v7
+        echo ::set-output name=docker_platforms::linux/amd64
         echo ::set-output name=docker_username::larskhansen
         echo ::set-output name=docker_image_master::docker.io/larskhansen/itotko
         echo ::set-output name=docker_image_develop::docker.io/larskhansen/itotko-dev
