--- a/config/itotko.settings.yml
+++ b/config/itotko.settings.yml
@@ -16,7 +16,7 @@ b5_top_container: container
 b5_top_container_config: ''
 b5_body_schema: none
 b5_body_bg_schema: none
-b5_navbar_schema: none
+b5_navbar_schema: light
 b5_navbar_bg_schema: none
 b5_footer_schema: none
 b5_footer_bg_schema: none
